[wrapper-tracing] Redesign dispatching on non-inheriting cases

Use a specialization of TraceTrait<>::traceMarkedWrapper for types that
do not inherit from TraceWrapperBase. This way we avoid exposing
non-virtual methods exposing GC details on managed objects.

Drive-by: Remove CanTraceWrappers macro as any misuse of the other macros
will yield in compile time errors.

BUG=chromium:701295

Review-Url: https://codereview.chromium.org/2748103002
Cr-Commit-Position: refs/heads/master@{#456714}

Former-commit-id: 96fd6f8611075233b0963e699dfd49305bbb1406